--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>360° View - San Juan Nepomoceno Church</title>
+    <title>360° View - San Juan Nepomuceno Church</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +25,7 @@
     <div class="main-container">
       <div class="container py-4">
         <header class="text-center mb-4">
-          <h1>San Juan Nepomoceno Church</h1>
+          <h1>San Juan Nepomuceno Church</h1>
           <p class="lead">Explore the historic church in 360°</p>
         </header>
         
@@ -35,7 +35,7 @@
               <div id="viewer"></div>
             </div>
             <div class="caption text-center mt-3">
-              <h3>San Juan Nepomoceno Church</h3>
+              <h3>San Juan Nepomuceno Church</h3>
               <p class="text-muted">Use mouse or touch to navigate the 360° view</p>
             </div>
           </div>
